--- a/committees.html
+++ b/committees.html
@@ -31,7 +31,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Committees</a>
+                    <a class="nav-link text-dark" href="committees.html">Committees</a>
+                    <!--<a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Committees</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="committees.html">Overview</a>
                         <a class="dropdown-item" href="GA1.html">GA1</a>
@@ -44,7 +45,7 @@
                         <a class="dropdown-item" href="SC.html">SC</a>
                         <a class="dropdown-item" href="AP.html">AP</a>
                     </div>
-                </li>
+                </li>-->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Conference</a>
                     <div class="dropdown-menu">
@@ -85,7 +86,7 @@
     <section class="section-header text-center" id="section-header">
         <strong><h1 class="display-1">Committees</h1></strong>
     </section>
-
+    
     <div id="committees-scroll">
         <div id="scroll-list" class="list-group">
             <a class="list-group-item list-group-item-action" href="#committee-view1">GA1</a>
@@ -101,27 +102,27 @@
     </div>
 
     <div class="container-fluid white wow slideInRight" id="committee-view1">
-        <a href="GA1.html"><section class="committee" id="ga1">
+        <a href="#"><section class="committee" id="ga1">
             <h1 class="display-4 text-dark white">General Assembly 1</h1>
             <hr text-light>
-            <h5 class="text-dark"> Combating the spread of diseases in South-East Asia
-                <br><br>Addressing the misconduct of UN peacekeepers
-                <br><br>Improving access to clean water and medical infrastructure in Afghanistan
-                <br><br>Ensuring voting security in transitional countries in the Balkan region
+            <h5 class="text-dark"> Measures to combat wildfire in Russia
+                <br><br>Addressing rampant plastic pollution in the oceans
+                <br><br>Assisting in the sustainable development of healthcare and sanitation in Sierra Leone
+                <br><br>
             </h5>
             <br>
         </section>
         </a>
     </div>
     <div class="container-fluid dark wow slideInRight" id="committee-view2">
-        <a href="GA2.html"><section class="committee" id="ga2">
+        <a href="#"><section class="committee" id="ga2">
             <br><br>
             <h1 class="display-4 text-light">General Assembly 2</h1>
             <hr class="text-light">
-            <h5 class="text-light"> Measures to prevent the spread of mosquito-borne diseases
-                <br><br>Measures to aid the transition to renewable energy in developing East Asian nations
-                <br><br>Protecting the rights of non-combatant individuals in in the Yemeni Civil War
-                <br><br>Measures to recover radiation contaminated zones
+            <h5 class="text-light"> Measures to contain the rising prevalence of measles globally
+                <br><br>Addressing the rise of anti-Semitism
+                <br><br>Methods to promote the development of democratic institutions in Africa
+                <br><br>
             </h5>
             <br>
         </section>
@@ -129,28 +130,29 @@
     </div>
     <br>
     <div class="container-fluid white wow slideInRight" id="committee-view3">
-        <a href="ENV.html"><section class="committee" id="ENV">
+        <a href="#">
+        <section class="committee" id="ENV">
             <h1 class="display-4 text-dark white">Environment Commission</h1>
             <hr>
-            <h5 class="text-dark"> Preventing the acceleration of climate change
-                <br><br>Measures to restore environments damaged by man-made disasters in the Caribbean
-                <br><br>Combating desertification in Sub-Saharan Africa
-                <br><br>Sustainable urban planning in rapidly developing countries
+            <h5 class="text-dark"> The question of enforcing environmental sustainability policies
+                <br><br>Addressing the impacts of eutrophication and water pollution in Latin America, Africa and Asia
+                <br><br>Facilitating the protection of coral reefs
+                <br><br>Methods to reduce deforestation in South East Asia
             </h5>
             <br>
         </section>
         </a>
     </div>
     <div class="container-fluid dark wow slideInRight" id="committee-view4">
-        <a href="ECOSOC.html">
-        <section class="committee" id="ECOSOC">
+        <a href="#">
+            <section class="committee" id="ECOSOC">
             <br>
             <h1 class="display-4 text-light">Economic and Social Council</h1>
             <hr class="text-light">
-            <h5 class="text-light"> Addressing the issue of urban slums in South America
-                <br><br>Improving infrastructure for technological growth in developing African economies
-                <br><br>Addressing the economic crisis in Venezuela
-                <br><br>Addressing the role of the internet in international crime
+            <h5 class="text-light"> Addressing mass youth unemployment in developing nations
+                <br><br>Measures to cope with social pressures caused by ageing populations
+                <br><br>Question of establishing the parameters for government interference in cryptocurrency
+                <br><br>
             </h5>
             <br>
             </section>
@@ -158,29 +160,29 @@
     </div>
     <br>
     <div class="container-fluid white wow slideInRight" id="committee-view5">
-        <a href="HRC.html">
+        <a href="#">
             <section class="committee" id="HRC">
             <h1 class="display-4 text-dark white">Human Rights Council</h1>
             <hr>
-            <h5 class="text-dark"> Measures to protect the movement of refugees
-                <br><br>Measures to combat international human trafficking
-                <br><br>Addressing the issue of child labourers in Asia
-                <br><br>Measures to rehabilitate internally displaced persons
+            <h5 class="text-dark"> Addressing global femicide
+                <br><br>Measures to address human rights abuses in Saudi Arabia and Yemen
+                <br><br>The question of promoting freedom of speech on social media platforms
+                <br><br>Upholding the right to adequate housing
             </h5>
             <br>
             </section>
         </a>
     </div>
     <div class="container-fluid dark wow slideInRight" id="committee-view6">
-        <a href="SPC.html">
+        <a href="#">
             <section class="committee" id="SPC">
             <br>
             <h1 class="display-4 text-light">Special Conference on Non-State Actors</h1>
             <hr class="text-light">
-            <h5 class="text-light">Measures to improve recognition of Kurdish minorities in the Middle East
-                <br><br>Measures to facilitate peace discussion with remaining ISIS groups in Syria
-                <br><br>Measures to reduce violence from drug cartels in Mexico
-                <br><br>Preventing the distribution of counterfeit medicine
+            <h5 class="text-light">Addressing the lack of data privacy globally
+                <br><br>Assisting in the implementation of big data infrastructure in developing countries
+                <br><br>Measures to address cyberattacks through digital diplomacy
+                <br><br>
             </h5>
             <br>
             </section>
@@ -188,28 +190,29 @@
     </div>
     <br>
     <div class="container-fluid white wow slideInRight" id="committee-view7">
-        <a href="DIS.html">
+        <a href="#">
             <section class="committee" id="DIS">
             <h1 class="display-4 text-dark white">Disarmament Council</h1>
             <hr>
-            <h5 class="text-dark"> Preventing the militarization of outer space
-                <br><br>Addressing the issue of biological weapons in warfare
-                <br><br>Facilitating the aftermath of the Syrian civil war
-                <br><br>Providing a resolution for the possibility of a nuclear crisis
-            <h5>
+            <h5 class="text-dark"> Facilitating reconstruction and peace talks in the aftermath of the Yemeni Civil War
+                <br><br>Addressing piracy in Somalia
+                <br><br>Facilitating peace talks in the Israel-Palestine conflict
+                <br><br>
+            </h5>
             <br>
             </section>
         </a>
     </div>
     <div class="container-fluid dark wow slideInRight" id="committee-view8">
-        <a href="SC.html">
+        <a href="#">
             <section class="committee" id="SC">
             <br>
             <h1 class="display-4 text-light">Security Council</h1>
             <hr class="text-light">
-            <h5 class="text-light"> The regulation of international arms corporations
-                <br><br>De-escalation of nuclear armament in the DPRK
-                <br><br>Measures to reduce the armament of paramilitary forces in the Libyan Civil War
+            <h5 class="text-light"> Addressing the recurrent ethnic conflicts in Burkina Faso
+                <br><br>Question of demilitarizing the Kashmir Valley
+                <br><br>Question of the situation in Northern Syria
+                <br><br>
             </h5>
             <br>
             </section>
@@ -217,18 +220,19 @@
     </div>
     <br>
     <div class="container-fluid white wow slideInRight" id="committee-view9">
-        <a href="AP.html">
+        <a href="#">
             <section class="committee" id="AP">
             <h1 class="display-4 text-dark white">Advisory Panel</h1>
             <hr>
             <h5 class="text-dark"> The question of humanitarian exemptions on the sanction regime of the DPRK
                 <br><br>Rebuilding infrastructure damaged as a result of the Libyan Civil War
+                <br><br>
+                <br><br>
             </h5>
             <br>
             </section>
         </a>
     </div>
-
 
     <!-- SCRIPTS -->
     <!-- JQuery -->
