--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>DIMUN IX</title>
+  <title>DIMUN X</title>
   <!-- favicon -->
   <link rel="shortcut icon" href="logo.ico">
   <!-- Bootstrap core CSS -->
@@ -22,7 +22,7 @@
 <body>
     <header>
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
-            <a class="navbar-brand text-dark" href="index.html"><img src=img/logo_black.png height=82 width=80><strong> DIMUN IX</strong></a>
+            <a class="navbar-brand text-dark" href="index.html"><img src=img/logo_black.png height=82 width=80><strong> DIMUN X</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="fas fa-list text-dark"></span>
@@ -30,7 +30,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Committees</a>
+                    <a class="nav-link text-dark" href="committees.html">Committees</a>
+                    <!--<a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Committees</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="committees.html">Overview</a>
                         <a class="dropdown-item" href="GA1.html">GA1</a>
@@ -43,7 +44,7 @@
                         <a class="dropdown-item" href="SC.html">SC</a>
                         <a class="dropdown-item" href="AP.html">AP</a>
                     </div>
-                </li>
+                </li>-->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Conference</a>
                     <div class="dropdown-menu">
@@ -92,13 +93,13 @@
     <section class="update container" id="about">
         <div class="row text-center">
             <div class="col-md-4">
-                <a href=spotlight.html><strong><p class="alert alert-primary"> Spotlight sign-ups are live!</p></strong></a>
+                <strong><p class="alert alert-primary"> Celebrating 10 Years</p></strong>
             </div>
             <div class="col-md-4">
                 <p class="h3 alert alert-primary">Welcome to DIMUN</p>
             </div>
             <div class="col-md-4">
-                <a href=committees.html><strong><p class="alert alert-primary">Chair reports are out!</p></strong></a>
+                <a href="committees.html"><strong><p class="alert alert-primary">Topics are out!</p></strong></a>
             </div>
         </div>
 		<br>
@@ -109,40 +110,33 @@
             <br>
             <p class="text-dark">Honourable MUN Directors, esteemed delegates, respected committee Chairs and welcome guests,
 
-                <br><br>DIMUN is back! The ninth annual Dulwich International Model United Nations conference (DIMUN IX) will be held at Dulwich College Beijing from 1st of March to 3rd of March 2019.
+                <br><br>DIMUN is back! The ninth annual Dulwich International Model United Nations conference (DIMUN X) will be held at Dulwich College Beijing from 1st of March to 3rd of March 2019.
 
                 <br><br>Model United Nations is a unique opportunity for students to expand their knowledge of world affairs and improve their public speaking skills through research, discussion and debate with other international students who share the same passions.
 
-                <br><br>At DIMUN IX, Key Stage 3 (middle school) delegates will be debating a total of 34 topics in eight different committees. The conference will be supported by experienced Key Stage 4/5 (high school) chairs and the DIMUNITE press team, led by Secretaries-General Kevin Yao and Jennifer Zhou.
+                <br><br>At DIMUN X, Key Stage 3 (middle school) delegates will be debating a total of 34 topics in eight different committees. The conference will be supported by experienced Key Stage 4/5 (high school) chairs and the DIMUNITE press team, led by Secretaries-General Erik Chen and Yi Xin Lee.
 
                 <br><br>Please do not hesitate to contact us for more information, or any questions regarding the conference at:
-                <a href="contact.html">dimun@dulwich-beijing.cn.</a>
+                <a href="mailto://dimun@dulwich-beijing.cn">dimun@dulwich-beijing.cn.</a>
             </p>
         </div>
     </section>
 
     <section class="container-fluid view2" id="theme">
-        <div id="view2-image-right">
-            <img src="img/view2-image-right.jpg">
-        </div>
         <div class="row">
             <div class="col-lg-7 content-wrapper" style="padding:0;">
                 <div id="view2-left-image-bg">
-                </div>
-                <div id="view2-image-center">
-                    <img src="img/view2-image-center.jpg">
                 </div>
             </div>
             <div class="col-lg-5 text-lg-right text-md-center theme-text" style="padding;" id="theme-text">
                 <p class="h1">Beyond Borders</p>
                 <hr>
-                As the worlds strives ever forwards into the twenty-first century, we enter a new age of diplomacy. Much of the issues now being debated by the United Nations is no longer between nation-states. Rather, non-state parties are far more often discussed. Indeed, technology has given the individual more power than ever to express their views and in light of the many conflicts, refugee crisis, and independence movements that have arisen in the turn of the century, it becomes ever the more important that diplomacy be as much nation to people as it is nation to nation. Thus, this year at DIMUN IX, we encourage you to look ever more beyond borders, to the individuals that makes up this world.
+                As the worlds strives ever forwards into the twenty-first century, we enter a new age of diplomacy. Much of the issues now being debated by the United Nations is no longer between nation-states. Rather, non-state parties are far more often discussed. Indeed, technology has given the individual more power than ever to express their views and in light of the many conflicts, refugee crisis, and independence movements that have arisen in the turn of the century, it becomes ever the more important that diplomacy be as much nation to people as it is nation to nation. Thus, this year at DIMUN X, we encourage you to look ever more beyond borders, to the individuals that makes up this world.
             </div>
         </div>
     </section>
-
-    <div class="pin" id="pinContainer">
-        <section class="container-fluid view3" id="founder">
+    
+    <section class="container-fluid view3" id="founder">
             <div class="row">
                 <div class="col-lg-7 text-center"id="founder-text">
                     <p class="h1">Message From the Founders</p>
@@ -158,80 +152,6 @@
             </div>
         </div>
         </section>
-
-        <section class="container-fluid view4">
-            <div class="row">
-                <div class="col-4">
-                    <div class="card">
-                        <!-- Card image -->
-                        <div class="view overlay">
-                            <img class="card-img-top" src="img/Spotlight4.JPG" alt="Card image cap">
-                            <a>
-                                <div class="mask rgba-white-slight"></div>
-                            </a>
-                        </div>
-                        <!-- Card content -->
-                        <div class="card-body elegant-color white-text rounded-bottom">
-                            <a class="activator waves-effect mr-4"><i class="fas fa-info white-text"></i></a>
-                            <!-- Title -->
-                            <h4 class="card-title">Spotlight</h4>
-                            <hr class="hr-light">
-                            <!-- Text -->
-                            <p class="card-text white-text mb-4">DIMUN Spotlight is a special event for DIMUN in which delegates can show off any talent that they might have. Who knows what spectacular performances will there be this year?</p>
-                            <!-- Link -->
-                            <a href="spotlight.html" class="white-text d-flex justify-content-end"><h5>Find out more <i class="fa fa-angle-double-right"></i></h5></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <div class="card">
-                        <!-- Card image -->
-                        <div class="view overlay">
-                            <img class="card-img-top" src="img/photo2.jpg" alt="Card image cap">
-                            <a>
-                                <div class="mask rgba-white-slight"></div>
-                            </a>
-                        </div>
-                        <!-- Card content -->
-                        <div class="card-body elegant-color white-text rounded-bottom">
-                            <a class="activator waves-effect mr-4"><i class="fas fa-info white-text"></i></a>
-                            <!-- Title -->
-                            <h4 class="card-title">Delegates</h4>
-                            <hr class="hr-light">
-                            <!-- Text -->
-                            <p class="card-text white-text mb-4">Prior to the conference, delegates are required to research their assigned countries in order to represent them effectively in debate. Delegates may go here to prepare.</p>
-                            <!-- Link -->
-                            <a href="delegates.html" class="white-text d-flex justify-content-end"><h5>Find out more <i class="fa fa-angle-double-right"></i></h5></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <div class="card">
-                        <!-- Card image -->
-                        <div class="view overlay">
-                            <img class="card-img-top" src="img/photo3.jpg" alt="Card image cap">
-                            <a>
-                                <div class="mask rgba-white-slight"></div>
-                            </a>
-                        </div>
-                        <!-- Card content -->
-                        <div class="card-body elegant-color white-text rounded-bottom">
-                            <a class="activator waves-effect mr-4"><i class="fas fa-info white-text"></i></a>
-                            <!-- Title -->
-                            <h4 class="card-title">Committees</h4>
-                            <hr class="hr-light">
-                            <!-- Text -->
-                            <p class="card-text white-text mb-4">At DIMUN IX, Key Stage 3 (middle school) delegates will be debating a total of 34 topics in eight different committees. Click here to find out information on the committees.</p>
-                            <!-- Link -->
-                            <a href="committees.html" class="white-text d-flex justify-content-end"><h5>Find out more <i class="fa fa-angle-double-right"></i></h5></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Row End -->
-        </section>
-    </div>
-
 
     <!-- SCRIPTS -->
     <!-- JQuery -->
