--- a/delegates.html
+++ b/delegates.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>DIMUN IX</title>
+    <title>DIMUN X</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="logo.ico">
     <!-- Font Awesome -->
@@ -24,7 +24,7 @@
 
     <header>
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
-            <a class="navbar-brand text-dark" href="index.html"><img src=img/logo_black.png height=82 width=80><strong> DIMUN IX</strong></a>
+            <a class="navbar-brand text-dark" href="index.html"><img src=img/logo_black.png height=82 width=80><strong> DIMUN X</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="fas fa-list text-dark"></span>
@@ -32,7 +32,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Committees</a>
+                    <a class="nav-link text-dark" href="committees.html">Committees</a>
+                    <!--<a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Committees</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="committees.html">Overview</a>
                         <a class="dropdown-item" href="GA1.html">GA1</a>
@@ -45,7 +46,7 @@
                         <a class="dropdown-item" href="SC.html">SC</a>
                         <a class="dropdown-item" href="AP.html">AP</a>
                     </div>
-                </li>
+                </li>-->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Conference</a>
                     <div class="dropdown-menu">
@@ -94,7 +95,7 @@
                 <hr>
                 <p><a href="https://github.com/dadimun/pdfs/raw/master/DIMUN%20Delegate%20Preparation%20Guide.pdf"><button class="btn btn-primary"><i class="fa fa-magic mr-1"></i>Delegate preparation guide</button></a>
                 <a href="https://github.com/dadimun/pdfs/raw/master/DIMUN%20How%20to%20write%20a%20resolution.pdf"><button class="btn btn-default">Writing a resolution<i class="fa fa-magic ml-1"></i></button></a>
-                    <br><br>Delegates must be in Years 7 – 9 (Grades 6 – 8), and no previous MUN experience is necessary. However, high-school students who wish to join DIMUN IX are welcome to join the Advisory Panel; a committee that has been opened specially for interested high-school students. At the conference, each committee will have one delegate per country.
+                    <br><br>Delegates must be in Years 7 – 9 (Grades 6 – 8), and no previous MUN experience is necessary. However, high-school students who wish to join DIMUN X are welcome to join the Advisory Panel; a committee that has been opened specially for interested high-school students. At the conference, each committee will have one delegate per country.
                     <br><br>Prior to the conference, delegates are required to research their assigned countries in order to represent them effectively in debate. They must also research their individual topics and prepare draft resolutions to be merged during lobbying. Delegates are also expected to be familiar with debate procedures, although committee Chairs will assist all delegates. Our Delegate Guide is available here and contains preparation and research guidelines, a sample resolution, the official DIMUN debate procedures and other relevant information.
                 </p>
                 <img src="img/delegates.jpg" class="img-fluid hoverable" id="delegates">
