--- a/photos.html
+++ b/photos.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>DIMUN IX</title>
+    <title>DIMUN X</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="logo.ico">
     <!-- Font Awesome -->
@@ -23,7 +23,7 @@
 <body data-spy="scroll" data-target="#scroll-list" data-offset="300">
     <header>
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
-            <a class="navbar-brand text-dark" href="index.html"><img src=img/logo_black.png height=82 width=80><strong> DIMUN IX</strong></a>
+            <a class="navbar-brand text-dark" href="index.html"><img src=img/logo_black.png height=82 width=80><strong> DIMUN X</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="fas fa-list text-dark"></span>
@@ -31,7 +31,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Committees</a>
+                    <a class="nav-link text-dark" href="spotlight.html">Committees</a>
+                    <!--<a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Committees</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="committees.html">Overview</a>
                         <a class="dropdown-item" href="GA1.html">GA1</a>
@@ -44,7 +45,7 @@
                         <a class="dropdown-item" href="SC.html">SC</a>
                         <a class="dropdown-item" href="AP.html">AP</a>
                     </div>
-                </li>
+                </li>-->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Conference</a>
                     <div class="dropdown-menu">
