--- a/schedule.html
+++ b/schedule.html
@@ -84,7 +84,7 @@
 	</header>
 
 	    <section class="section-header text-center" id="section-header">
-	        <strong><h1 class="display-1">Schedule</h1></strong>
+	        <strong><h1 class="display-1">DIMUN IX Schedule</h1></strong>
 	    </section>
 
 	    <section>
