--- a/committees.html
+++ b/committees.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>DIMUN IX</title>
+    <title>DIMUN X</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="logo.ico">
     <!-- Font Awesome -->
@@ -23,7 +23,7 @@
 <body data-spy="scroll" data-target="#scroll-list" data-offset="250">
     <header>
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
-            <a class="navbar-brand text-dark" href="index.html"><img src=img/logo_black.png height=82 width=80><strong> DIMUN IX</strong></a>
+            <a class="navbar-brand text-dark" href="index.html"><img src=img/logo_black.png height=82 width=80><strong> DIMUN X</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="fas fa-list text-dark"></span>
@@ -224,9 +224,8 @@
             <section class="committee" id="AP">
             <h1 class="display-4 text-dark white">Advisory Panel</h1>
             <hr>
-            <h5 class="text-dark"> The question of humanitarian exemptions on the sanction regime of the DPRK
-                <br><br>Rebuilding infrastructure damaged as a result of the Libyan Civil War
-                <br><br>
+            <h5 class="text-dark"> The question of the humanitarian crisis in Yemen. 
+                <br><br>Addressing the issue of Kurdish militant groups and the ongoing Kurdish-Turkish conflicts. 
                 <br><br>
             </h5>
             <br>
