--- a/index.html
+++ b/index.html
@@ -91,18 +91,7 @@
     </section>
     <br><br>
     <section class="update container" id="about">
-        <div class="row text-center">
-            <div class="col-md-4">
-                <strong><p class="alert alert-primary"> Celebrating 10 Years</p></strong>
-            </div>
-            <div class="col-md-4">
-                <p class="h3 alert alert-primary">Welcome to DIMUN</p>
-            </div>
-            <div class="col-md-4">
-                <a href="committees.html"><strong><p class="alert alert-primary">Topics are out!</p></strong></a>
-            </div>
-        </div>
-		<br>
+        <br>
         <div class="text-center">
             <h1 class="text-dark h1">About Us </h1>
             <br>
@@ -110,7 +99,7 @@
             <br>
             <p class="text-dark">Honourable MUN Directors, esteemed delegates, respected committee Chairs and welcome guests,
 
-                <br><br>DIMUN is back! The ninth annual Dulwich International Model United Nations conference (DIMUN X) will be held at Dulwich College Beijing from 1st of March to 3rd of March 2019.
+                <br><br>DIMUN is back! The ninth annual Dulwich International Model United Nations conference (DIMUN X) will be held at Dulwich College Beijing from 13th of March to 15th of March 2019.
 
                 <br><br>Model United Nations is a unique opportunity for students to expand their knowledge of world affairs and improve their public speaking skills through research, discussion and debate with other international students who share the same passions.
 
@@ -131,14 +120,14 @@
             <div class="col-lg-5 text-lg-right text-md-center theme-text" style="padding;" id="theme-text">
                 <p class="h1">Beyond Borders</p>
                 <hr>
-                As the worlds strives ever forwards into the twenty-first century, we enter a new age of diplomacy. Much of the issues now being debated by the United Nations is no longer between nation-states. Rather, non-state parties are far more often discussed. Indeed, technology has given the individual more power than ever to express their views and in light of the many conflicts, refugee crisis, and independence movements that have arisen in the turn of the century, it becomes ever the more important that diplomacy be as much nation to people as it is nation to nation. Thus, this year at DIMUN X, we encourage you to look ever more beyond borders, to the individuals that makes up this world.
+                A past decade of change begets an impending decade of change. As we celebrate the tenth anniversary of DIMUN in March 2020, the changes that we have witnessed throughout this bustling decade require the close attention of our global community as they would, if left unattended to, jeopardize the current prosperity and progress the world is making. DIMUN X therefore challenges you to pursue sustainable solutions to the variety of issues that you will face while working collaboratively to protect national interests but also to find areas of compromise.
             </div>
         </div>
     </section>
     
     <section class="container-fluid view3" id="founder">
             <div class="row">
-                <div class="col-lg-7 text-center"id="founder-text">
+                <div class="col-lg-7 text-center" id="founder-text">
                     <p class="h1">Message From the Founders</p>
                     <hr>
                     Honourable Directors, Distinguished Chairs, and most of all Esteemed Delegates, The Dulwich International Model United Nations (DIMUN) conference was created to bring MUN to students often considered too young to fully understand, appreciate, and participate in the complexities of politics, debates, and problem-solving. When we came up with the idea for DIMUN, at around sixteen years old, we had already attended several Model UN conferences around the Asia Pacific and knew that this perception was completely wrong. <br><br>
