--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     <section class="container-fluid view1" id="view1">
         <div class="view1-bg" id="view1-bg">
             <div class="view1-text" id="view1-text">
+                
             </div>
         </div>
         <a href="#about"><i class="container-fluid fas fa-angle-double-down text-dark text-center animated flash slow infinite" id="view-scroll"></i></a>
@@ -99,11 +100,11 @@
             <br>
             <p class="text-dark">Honourable MUN Directors, esteemed delegates, respected committee Chairs and welcome guests,
 
-                <br><br>DIMUN is back! The ninth annual Dulwich International Model United Nations conference (DIMUN X) will be held at Dulwich College Beijing from 13th of March to 15th of March 2019.
+                <br><br>DIMUN is back! The tenth annual Dulwich International Model United Nations conference (DIMUN X) will be held at Dulwich College Beijing from 13th of March to 15th of March 2020.
 
                 <br><br>Model United Nations is a unique opportunity for students to expand their knowledge of world affairs and improve their public speaking skills through research, discussion and debate with other international students who share the same passions.
 
-                <br><br>At DIMUN X, Key Stage 3 (middle school) delegates will be debating a total of 34 topics in eight different committees. The conference will be supported by experienced Key Stage 4/5 (high school) chairs and the DIMUNITE press team, led by Secretaries-General Erik Chen and Yi Xin Lee.
+                <br><br>At DIMUN X, Key Stage 3 (middle school) delegates will be debating a total of 28 topics in eight different committees. The conference will be supported by experienced Key Stage 4/5 (high school) chairs and the DIMUNITE press team, led by Secretaries-General Erik Chen and Yi Xin Lee.
 
                 <br><br>Please do not hesitate to contact us for more information, or any questions regarding the conference at:
                 <a href="mailto://dimun@dulwich-beijing.cn">dimun@dulwich-beijing.cn.</a>
@@ -118,7 +119,7 @@
                 </div>
             </div>
             <div class="col-lg-5 text-lg-right text-md-center theme-text" style="padding;" id="theme-text">
-                <p class="h1">Beyond Borders</p>
+                <p class="h1">A Decade of Change</p>
                 <hr>
                 A past decade of change begets an impending decade of change. As we celebrate the tenth anniversary of DIMUN in March 2020, the changes that we have witnessed throughout this bustling decade require the close attention of our global community as they would, if left unattended to, jeopardize the current prosperity and progress the world is making. DIMUN X therefore challenges you to pursue sustainable solutions to the variety of issues that you will face while working collaboratively to protect national interests but also to find areas of compromise.
             </div>
