--- a/secretariat.html
+++ b/secretariat.html
@@ -136,7 +136,7 @@
                     </div>
 
                     <div class="col-lg-3 col-md-4 text-center">
-                        <a data-toggle="modal" data-target="#Erik"><img src="img/Exec Photos/FinalErik.jpg" class="img-fluid z-depth-1 rounded-circle hoverable"></a>
+                        <a data-toggle="modal" data-target="#Erik"><img src="img/Exec Photos/FinalErik.JPG" class="img-fluid z-depth-1 rounded-circle hoverable"></a>
                         <br><br>
                         <strong><p>Secretary General</p></strong>
                         <p>Erik Chen</p>
@@ -499,7 +499,7 @@
                     </div>
 
                     <div class="col-lg-3 col-md-4 text-center">
-                        <a data-toggle="modal" data-target="#Reynard"><img src="img/Exec Photos/FinalReynard.jpg" class="img-fluid z-depth-1 rounded-circle hoverable"></a>
+                        <a data-toggle="modal" data-target="#Reynard"><img src="img/Exec Photos/FInalReynard.jpg" class="img-fluid z-depth-1 rounded-circle hoverable"></a>
                         <br><br>
                         <strong><p>Deputy Head of Tech</p></strong>
                         <p>Reynard Jung</p>
