Small problems (hopefully fixed)

--- a/secretariat.html
+++ b/secretariat.html
@@ -417,7 +417,7 @@
                     </div>
                     
                     <div class="col-lg-3 col-md-4 text-center">
-                        <a data-toggle="modal" data-target="#Ryan"><img src="img/Exec Photos/FinalDickhead" class="img-fluid z-depth-1 rounded-circle hoverable"></a>
+                        <a data-toggle="modal" data-target="#Ryan"><img src="img/Exec Photos/FinalDickhead.jpg" class="img-fluid z-depth-1 rounded-circle hoverable"></a>
                         <br><br>
                         <strong><p>Deputy Head of Admin</p></strong>
                         <p>Ryan Ho</p>
@@ -499,7 +499,7 @@
                     </div>
 
                     <div class="col-lg-3 col-md-4 text-center">
-                        <a data-toggle="modal" data-target="#Reynard"><img src="img/Exec Photos/FInalReynard.jpg" class="img-fluid z-depth-1 rounded-circle hoverable"></a>
+                        <a data-toggle="modal" data-target="#Reynard"><img src="img/Exec Photos/FinalReynard.jpg" class="img-fluid z-depth-1 rounded-circle hoverable"></a>
                         <br><br>
                         <strong><p>Deputy Head of Tech</p></strong>
                         <p>Reynard Jung</p>
