Compatibility with school

--- a/secretariat.html
+++ b/secretariat.html
@@ -417,7 +417,7 @@
                     </div>
                     
                     <div class="col-lg-3 col-md-4 text-center">
-                        <a data-toggle="modal" data-target="#Ryan"><img src="img/Exec Photos/FinalDickhead.jpg" class="img-fluid z-depth-1 rounded-circle hoverable"></a>
+                        <a data-toggle="modal" data-target="#Ryan"><img src="img/Exec Photos/FinalRyan.jpg" class="img-fluid z-depth-1 rounded-circle hoverable"></a>
                         <br><br>
                         <strong><p>Deputy Head of Admin</p></strong>
                         <p>Ryan Ho</p>
